# 2spektd

./: .gitignore  2SPEKTD_INTEGRATION_ANALYSIS.md  2SPEKTD_WORKFLOW_VISUAL.md  CHANGELOG.md  CONTRIBUTING.md  IMPLEMENTATION-COMPLETE.md  IMPLEMENTATION_STATUS.md  IMPROVEMENTS_VISUAL.md  MVP_IMPLEMENTATION_STATUS.md  PHASE-1-AUDIT.md  PHASE_A_FINAL_PLAN.md  QUICK_START.txt  README.md  ROADMAP.md  SESSION_CONTEXT.md  SESSION_SUMMARY.md  STATUS.md  install.sh  pyproject.toml
docs/archive/: IMPLEMENTATION-COMPLETE.md  MVP_STATUS_FINAL.md  PHASE_A_IMPROVEMENTS.md  README.md  VERIFICATION_CHECKPOINTS.md  VERIFICATION_INTEGRATION_VISUAL.md
docs/design/: loop-convergence-md-proposed-diff.md  loop-protocol-audit-2026-06-01.md  wave-0-planning.md
mcp-server/: server.py
remediation/: spec2-remediate.sh
skills/2spektd-new/: SKILL.md
skills/2spektd-upgrade/: SKILL.md
skills/spec2/: 2spektd-new  API_SETUP.md  SKILL.md  orchestrate.ts  package-lock.json  package.json  skill.ts  test-mvp.ts  tsconfig.json
skills/spec2-api/: SKILL.md  package-lock.json  package.json  server.ts  smoke-test.mjs  tsconfig.json
skills/spec2-legacy/: 2spektd-upgrade  SKILL.md
skills/spec2-mcp/: SKILL.md  TESTING.md  install-to-claude.mjs  package-lock.json  package.json  server.ts  smoke-test.mjs  stdio-hygiene-test.mjs
skills/spec2-resume/: .gitignore  SKILL.md  package-lock.json  package.json  resume.ts  tsconfig.json
skills/spec2-status/: SKILL.md  package-lock.json  package.json  status.ts
test-components/sample-python/: calculator.py  pyrightconfig.json  test_calculator.py
validation/: COMPLETION-SUMMARY.md  IMPLEMENTATION-STATUS.md  OUTLINE-STRONG-V2-SPEC.md  QUICK-START.md  validate-component.sh
validation/agents/: README.md  artifact-audit-agent.md  artifact-gen-agent.md  (+7 more)
(+105 files in other folders)
