[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "2spektd"
version = "1.0.0"
description = "Multi-language validation framework with anti-reward-hacking guarantees"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "seattled23", email = "seattled23@users.noreply.github.com"}
]
keywords = ["validation", "testing", "code-quality", "deterministic", "outline-driven-development"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Testing"
]

dependencies = [
    "mcp>=0.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black>=23.0",
    "mypy>=1.0",
    "ruff>=0.1.0"
]

[project.urls]
Homepage = "https://github.com/seattled23/2spektd"
Documentation = "https://github.com/seattled23/2spektd/blob/main/README.md"
Repository = "https://github.com/seattled23/2spektd"
Issues = "https://github.com/seattled23/2spektd/issues"

[project.scripts]
2spektd-server = "mcp_server.server:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["mcp_server*"]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true
